--- a/.github/workflows/android-build-test.yml
+++ b/.github/workflows/android-build-test.yml
@@ -24,6 +24,10 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+      - name: cd android
+        run: git submodule update --init --recursive
+      - name: cd android
+        run: cd android
       - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
@@ -43,8 +47,6 @@ jobs:
       - name: Install Example app dependencies
         working-directory: ${{ env.WORKING_DIRECTORY }}
         run: yarn
-      - name: cd android
-        run: cd android
       - name: Build app
         run: ./gradlew assembleDebug --console=plain
  
